--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </button>
       </header>
 
+      <!-- Floating search -->
+      <div class="floatingSearch">
+        <button class="iconBtn glassBtn" id="btnSearch" aria-label="Buscar">
+          <svg class="icon" viewBox="0 0 24 24">
+            <path d="M21 21l-4.35-4.35"></path>
+            <circle cx="11" cy="11" r="7"></circle>
+          </svg>
+        </button>
+      </div>
 
       <!-- Center brand -->
       <section class="centerContent">
