--- a/index.html
+++ b/index.html
@@ -47,14 +47,16 @@
 
       <!-- Center brand -->
       <section class="centerContent">
-        <h1 class="brandTitle" id="brandTitle">INVICTUS STREAMING</h1>
+  <img id="brandLogo" class="brandLogo" alt="Logo Invictus" />
+  <h1 class="brandTitle" id="brandTitle">INVICTUS STREAMING</h1>
 
-        <button class="ratingLine" id="btnOpenRatings" type="button">
-          <span class="ratingValue" id="ratingValue">4.8</span>
-          <span class="star">★★★★★</span>
-          <span class="ratingCount" id="ratingCount">(0)</span>
-        </button>
-      </section>
+  <button class="ratingLine" id="btnOpenRatings" type="button">
+    <span class="ratingValue" id="ratingValue">4.8</span>
+    <span class="star">★★★★★</span>
+    <span class="ratingCount" id="ratingCount">(0)</span>
+  </button>
+</section>
+
 
       <!-- Cards -->
       <section class="cards">
