--- a/index.html
+++ b/index.html
@@ -16,21 +16,24 @@
 
       <!-- Top bar -->
       <header class="topbar">
-        <button class="iconBtn glassBtn" id="btnMenu" aria-label="Abrir menú">
-          <svg class="icon" viewBox="0 0 24 24">
-            <path d="M4 7h16M4 12h16M4 17h16" />
-          </svg>
-        </button>
-
-        <button class="glassPill" id="btnLogin">Entregas Inmediatas</button>
-
-        <button class="iconBtn glassBtn" id="btnShare" aria-label="Compartir">
+        <!-- ✅ IZQUIERDA: Compartir (antes era hamburguesa) -->
+        <button class="iconBtn glassBtn" id="btnShareTop" aria-label="Compartir">
           <svg class="icon" viewBox="0 0 24 24">
             <path d="M15 8a3 3 0 1 0-2.83-4"></path>
             <path d="M16 8l-8 4"></path>
             <path d="M8 12l8 4"></path>
             <path d="M9 20a3 3 0 1 0-2.83-4"></path>
             <path d="M21 12a3 3 0 1 0-2.83-4"></path>
+          </svg>
+        </button>
+
+        <button class="glassPill" id="btnLogin">Entregas Inmediatas</button>
+
+        <!-- ✅ DERECHA: WhatsApp verde (antes era compartir) -->
+        <button class="iconBtn whatsBtn" id="btnWhatsAppTop" aria-label="WhatsApp">
+          <svg viewBox="0 0 24 24" class="waIcon" aria-hidden="true">
+            <path d="M20 12.1a8 8 0 10-14.6 4.5L4 21l4.6-1.3A8 8 0 0020 12.1z" />
+            <path d="M9.2 8.7c-.2-.5-.4-.5-.6-.5h-.5c-.2 0-.5.1-.7.4-.2.3-.9.9-.9 2.1s.9 2.4 1 2.6c.1.2 1.8 3 4.3 4.1 2.1.9 2.5.7 3 .7.5-.1 1.5-.6 1.7-1.2.2-.6.2-1.1.1-1.2-.1-.1-.2-.2-.5-.3l-1.8-.9c-.2-.1-.4-.1-.6.1l-.7.8c-.1.2-.3.2-.5.1-.2-.1-.9-.3-1.7-1-.6-.6-1-1.3-1.1-1.5-.1-.2 0-.4.1-.5l.3-.4c.1-.1.1-.3.2-.4.1-.1 0-.3 0-.4l-.8-2z"/>
           </svg>
         </button>
       </header>
