--- a/index.html
+++ b/index.html
@@ -1,251 +1,230 @@
 <!doctype html>
 <html lang="es">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
     <title>Invictus Streaming</title>
     <link rel="stylesheet" href="./styles.css" />
-  </head>
+</head>
 
-  <body>
+<body>
     <main class="hero" id="hero">
-      <div class="hero__bg" id="heroBg"></div>
+        <div class="hero__bg" id="heroBg"></div>
 
-      <!-- Top bar -->
-      <header class="topbar">
-        <!-- ✅ IZQUIERDA: Compartir (antes era hamburguesa) -->
-        <button class="iconBtn glassBtn" id="btnShareTop" aria-label="Compartir">
-          <svg class="icon" viewBox="0 0 24 24">
-            <path d="M15 8a3 3 0 1 0-2.83-4"></path>
-            <path d="M16 8l-8 4"></path>
-            <path d="M8 12l8 4"></path>
-            <path d="M9 20a3 3 0 1 0-2.83-4"></path>
-            <path d="M21 12a3 3 0 1 0-2.83-4"></path>
-          </svg>
-        </button>
+        <!-- Top bar -->
+        <header class="topbar">
+            <!-- ✅ IZQUIERDA: Compartir (antes era hamburguesa) -->
+            <button class="iconBtn glassBtn" id="btnShareTop" aria-label="Compartir">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                    stroke="currentColor" class="icon" aria-hidden="true">
+                    <path stroke-linecap="round" stroke-linejoin="round"
+                        d="M7.217 10.907a2.25 2.25 0 1 0 0 2.186m0-2.186c.18.324.283.696.283 1.093s-.103.77-.283 1.093m0-2.186 9.566-5.314m-9.566 7.5 9.566 5.314m0 0a2.25 2.25 0 1 0 3.935 2.186 2.25 2.25 0 0 0-3.935-2.186Zm0-12.814a2.25 2.25 0 1 0 3.933-2.185 2.25 2.25 0 0 0-3.933 2.185Z" />
+                </svg>
+            </button>
 
-        <button class="glassPill" id="btnLogin">Entregas Inmediatas</button>
 
-        <!-- ✅ DERECHA: WhatsApp verde (antes era compartir) -->
-        <button class="iconBtn whatsBtn" id="btnWhatsAppTop" aria-label="WhatsApp">
-          <svg viewBox="0 0 24 24" class="waIcon" aria-hidden="true">
-            <path d="M20 12.1a8 8 0 10-14.6 4.5L4 21l4.6-1.3A8 8 0 0020 12.1z" />
-            <path d="M9.2 8.7c-.2-.5-.4-.5-.6-.5h-.5c-.2 0-.5.1-.7.4-.2.3-.9.9-.9 2.1s.9 2.4 1 2.6c.1.2 1.8 3 4.3 4.1 2.1.9 2.5.7 3 .7.5-.1 1.5-.6 1.7-1.2.2-.6.2-1.1.1-1.2-.1-.1-.2-.2-.5-.3l-1.8-.9c-.2-.1-.4-.1-.6.1l-.7.8c-.1.2-.3.2-.5.1-.2-.1-.9-.3-1.7-1-.6-.6-1-1.3-1.1-1.5-.1-.2 0-.4.1-.5l.3-.4c.1-.1.1-.3.2-.4.1-.1 0-.3 0-.4l-.8-2z"/>
-          </svg>
-        </button>
-      </header>
+            <button class="glassPill" id="btnLogin">Entregas Inmediatas</button>
 
-      <!-- Floating search -->
-      <div class="floatingSearch">
-        <button class="iconBtn glassBtn" id="btnSearch" aria-label="Buscar">
-          <svg class="icon" viewBox="0 0 24 24">
-            <path d="M21 21l-4.35-4.35"></path>
-            <circle cx="11" cy="11" r="7"></circle>
-          </svg>
-        </button>
-      </div>
+            <!-- ✅ DERECHA: WhatsApp verde (antes era compartir) -->
+            <button class="iconBtn whatsBtn" id="btnWhatsAppTop" aria-label="WhatsApp">
+                <svg viewBox="0 0 24 24" class="waIcon" aria-hidden="true">
+                    <path d="M20 12.1a8 8 0 10-14.6 4.5L4 21l4.6-1.3A8 8 0 0020 12.1z" />
+                    <path
+                        d="M9.2 8.7c-.2-.5-.4-.5-.6-.5h-.5c-.2 0-.5.1-.7.4-.2.3-.9.9-.9 2.1s.9 2.4 1 2.6c.1.2 1.8 3 4.3 4.1 2.1.9 2.5.7 3 .7.5-.1 1.5-.6 1.7-1.2.2-.6.2-1.1.1-1.2-.1-.1-.2-.2-.5-.3l-1.8-.9c-.2-.1-.4-.1-.6.1l-.7.8c-.1.2-.3.2-.5.1-.2-.1-.9-.3-1.7-1-.6-.6-1-1.3-1.1-1.5-.1-.2 0-.4.1-.5l.3-.4c.1-.1.1-.3.2-.4.1-.1 0-.3 0-.4l-.8-2z" />
+                </svg>
+            </button>
+        </header>
 
-      <!-- Center brand -->
-      <section class="centerContent">
-        <h1 class="brandTitle" id="brandTitle">INVICTUS STREAMING</h1>
+        <!-- Floating search -->
+        <div class="floatingSearch">
+            <button class="iconBtn glassBtn" id="btnSearch" aria-label="Buscar">
+                <svg class="icon" viewBox="0 0 24 24">
+                    <path d="M21 21l-4.35-4.35"></path>
+                    <circle cx="11" cy="11" r="7"></circle>
+                </svg>
+            </button>
+        </div>
 
-        <button class="ratingLine" id="btnOpenRatings" type="button">
-          <span class="ratingValue" id="ratingValue">4.8</span>
-          <span class="star">★★★★★</span>
-          <span class="ratingCount" id="ratingCount">(0)</span>
-        </button>
-      </section>
+        <!-- Center brand -->
+        <section class="centerContent">
+            <h1 class="brandTitle" id="brandTitle">INVICTUS STREAMING</h1>
 
-      <!-- Cards -->
-      <section class="cards">
-        <article class="glassCard">
-          <div class="cardTitle" id="platformsTitle">Vuelve a entrar</div>
-          <div class="hScroll" id="platformsRow"></div>
-        </article>
+            <button class="ratingLine" id="btnOpenRatings" type="button">
+                <span class="ratingValue" id="ratingValue">4.8</span>
+                <span class="star">★★★★★</span>
+                <span class="ratingCount" id="ratingCount">(0)</span>
+            </button>
+        </section>
 
-        <article class="glassCard">
-          <div class="cardTitle" id="screensTitle">Para ti</div>
-          <div class="screensRow" id="screensRow"></div>
-        </article>
+        <!-- Cards -->
+        <section class="cards">
+            <article class="glassCard">
+                <div class="cardTitle" id="platformsTitle">Vuelve a entrar</div>
+                <div class="hScroll" id="platformsRow"></div>
+            </article>
 
-        <article class="glassCard reviewsCard">
-          <div class="cardTitle">
-            <span>Reseñas</span>
-          </div>
-          <div class="reviewsList" id="reviewsList"></div>
-        </article>
-      </section>
+            <article class="glassCard">
+                <div class="cardTitle" id="screensTitle">Para ti</div>
+                <div class="screensRow" id="screensRow"></div>
+            </article>
+
+            <article class="glassCard reviewsCard">
+                <div class="cardTitle">
+                    <span>Reseñas</span>
+                </div>
+                <div class="reviewsList" id="reviewsList"></div>
+            </article>
+        </section>
     </main>
 
     <!-- Bottom nav -->
     <nav class="bottomNav" aria-label="Navegación">
-      <button class="navBtn active" data-tab="home" aria-label="Inicio">
-        <svg class="navIcon" viewBox="0 0 24 24">
-          <path
-            d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1v-10.5z"
-          />
-        </svg>
-      </button>
+        <button class="navBtn active" data-tab="home" aria-label="Inicio">
+            <svg class="navIcon" viewBox="0 0 24 24">
+                <path d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1v-10.5z" />
+            </svg>
+        </button>
 
-      <button class="navBtn" data-tab="search" aria-label="Buscar">
-        <svg class="navIcon" viewBox="0 0 24 24">
-          <circle cx="11" cy="11" r="7"></circle>
-          <path d="M21 21l-4.35-4.35"></path>
-        </svg>
-      </button>
+        <button class="navBtn" data-tab="search" aria-label="Buscar">
+            <svg class="navIcon" viewBox="0 0 24 24">
+                <circle cx="11" cy="11" r="7"></circle>
+                <path d="M21 21l-4.35-4.35"></path>
+            </svg>
+        </button>
 
-      <button class="navBtn" data-tab="bag" aria-label="Carrito">
-        <svg class="navIcon" viewBox="0 0 24 24">
-          <path d="M6 7h12l-1 14H7L6 7z"></path>
-          <path d="M9 7a3 3 0 0 1 6 0"></path>
-        </svg>
-      </button>
+        <button class="navBtn" data-tab="bag" aria-label="Carrito">
+            <svg class="navIcon" viewBox="0 0 24 24">
+                <path d="M6 7h12l-1 14H7L6 7z"></path>
+                <path d="M9 7a3 3 0 0 1 6 0"></path>
+            </svg>
+        </button>
     </nav>
 
     <!-- Drawer -->
     <aside class="drawer" id="drawer" aria-hidden="true">
-      <div class="drawer__backdrop" id="drawerBackdrop"></div>
-      <div class="drawer__panel" role="dialog" aria-label="Menú lateral">
-        <div class="drawer__header">
-          <div class="drawer__title">Menú</div>
-          <button
-            class="iconBtn glassBtn"
-            id="btnCloseDrawer"
-            aria-label="Cerrar"
-          >
-            <svg class="icon" viewBox="0 0 24 24">
-              <path d="M18 6L6 18M6 6l12 12" />
-            </svg>
-          </button>
-        </div>
+        <div class="drawer__backdrop" id="drawerBackdrop"></div>
+        <div class="drawer__panel" role="dialog" aria-label="Menú lateral">
+            <div class="drawer__header">
+                <div class="drawer__title">Menú</div>
+                <button class="iconBtn glassBtn" id="btnCloseDrawer" aria-label="Cerrar">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <path d="M18 6L6 18M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
 
-        <button class="drawerItem" data-tab="home">Inicio</button>
-        <button class="drawerItem" data-tab="search">Buscar</button>
-        <button class="drawerItem" data-tab="bag">Carrito</button>
-      </div>
+            <button class="drawerItem" data-tab="home">Inicio</button>
+            <button class="drawerItem" data-tab="search">Buscar</button>
+            <button class="drawerItem" data-tab="bag">Carrito</button>
+        </div>
     </aside>
 
     <!-- Ratings Sheet -->
     <section class="sheet" id="ratingsSheet" aria-hidden="true">
-      <div class="sheet__backdrop" id="ratingsBackdrop"></div>
-      <div class="sheet__panel" role="dialog" aria-label="Calificaciones">
-        <div class="sheet__handle"></div>
+        <div class="sheet__backdrop" id="ratingsBackdrop"></div>
+        <div class="sheet__panel" role="dialog" aria-label="Calificaciones">
+            <div class="sheet__handle"></div>
 
-        <div class="sheet__header">
-          <div class="sheet__title">Calificaciones</div>
-          <button
-            class="iconBtn glassBtn"
-            id="btnCloseRatings"
-            aria-label="Cerrar"
-          >
-            <svg class="icon" viewBox="0 0 24 24">
-              <path d="M18 6L6 18M6 6l12 12" />
-            </svg>
-          </button>
+            <div class="sheet__header">
+                <div class="sheet__title">Calificaciones</div>
+                <button class="iconBtn glassBtn" id="btnCloseRatings" aria-label="Cerrar">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <path d="M18 6L6 18M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+
+            <div class="sheet__summary">
+                <div>
+                    <div class="sheet__big" id="sheetRatingValue">4.8</div>
+                    <div class="sheet__small" id="sheetRatingCount">0 reseñas</div>
+                </div>
+            </div>
+
+            <div class="breakdown" id="breakdown"></div>
+
+            <div class="sheet__actions sheet__actions--below">
+                <button class="primaryBtn" id="btnOpenReviewForm">
+                    Publicar reseña
+                </button>
+                <div class="sheet__hint">Puedes deslizar para ver más.</div>
+            </div>
+
+            <div class="sheetReviewsWrap" id="sheetReviewsWrap">
+                <div class="sheetReviewsHeader">
+                    <div class="sheetReviewsTitle">Reseñas</div>
+                    <div class="sheetReviewsCount" id="sheetReviewsCount">0</div>
+                </div>
+                <div class="sheetReviewsList" id="sheetReviewsList"></div>
+            </div>
         </div>
-
-        <div class="sheet__summary">
-          <div>
-            <div class="sheet__big" id="sheetRatingValue">4.8</div>
-            <div class="sheet__small" id="sheetRatingCount">0 reseñas</div>
-          </div>
-        </div>
-
-        <div class="breakdown" id="breakdown"></div>
-
-        <div class="sheet__actions sheet__actions--below">
-          <button class="primaryBtn" id="btnOpenReviewForm">
-            Publicar reseña
-          </button>
-          <div class="sheet__hint">Puedes deslizar para ver más.</div>
-        </div>
-
-        <div class="sheetReviewsWrap" id="sheetReviewsWrap">
-          <div class="sheetReviewsHeader">
-            <div class="sheetReviewsTitle">Reseñas</div>
-            <div class="sheetReviewsCount" id="sheetReviewsCount">0</div>
-          </div>
-          <div class="sheetReviewsList" id="sheetReviewsList"></div>
-        </div>
-      </div>
     </section>
 
     <!-- Review Form Sheet -->
     <section class="sheet" id="reviewSheet" aria-hidden="true">
-      <div class="sheet__backdrop" id="reviewBackdrop"></div>
-      <div class="sheet__panel" role="dialog" aria-label="Publicar reseña">
-        <div class="sheet__handle"></div>
+        <div class="sheet__backdrop" id="reviewBackdrop"></div>
+        <div class="sheet__panel" role="dialog" aria-label="Publicar reseña">
+            <div class="sheet__handle"></div>
 
-        <div class="sheet__header">
-          <div class="sheet__title">Publicar reseña</div>
-          <button class="iconBtn glassBtn" id="btnCloseReview" aria-label="Cerrar">
-            <svg class="icon" viewBox="0 0 24 24">
-              <path d="M18 6L6 18M6 6l12 12" />
-            </svg>
-          </button>
+            <div class="sheet__header">
+                <div class="sheet__title">Publicar reseña</div>
+                <button class="iconBtn glassBtn" id="btnCloseReview" aria-label="Cerrar">
+                    <svg class="icon" viewBox="0 0 24 24">
+                        <path d="M18 6L6 18M6 6l12 12" />
+                    </svg>
+                </button>
+            </div>
+
+            <form class="form" id="reviewForm">
+                <label class="field">
+                    <span>Nombre</span>
+                    <input id="fUsername" maxlength="24" required placeholder="Ej. Angel" />
+                </label>
+
+                <label class="field">
+                    <span>Calificación</span>
+                    <select id="fRating" required>
+                        <option value="5">5 ★★★★★</option>
+                        <option value="4">4 ★★★★</option>
+                        <option value="3">3 ★★★</option>
+                        <option value="2">2 ★★</option>
+                        <option value="1">1 ★</option>
+                    </select>
+                </label>
+
+                <label class="field">
+                    <span>Servicio comprado</span>
+                    <input id="fService" type="text" maxlength="40" required
+                        placeholder="Ej. Netflix Premium / Disney+ / Spotify" />
+                </label>
+
+                <label class="field">
+                    <span>Reseña</span>
+                    <textarea id="fText" rows="4" maxlength="240" required
+                        placeholder="Cuenta tu experiencia..."></textarea>
+                    <div class="charCount"><span id="charNow">0</span>/240</div>
+                </label>
+
+                <button class="primaryBtn" id="btnSubmitReview" type="submit">
+                    Enviar (queda pendiente de aprobación)
+                </button>
+
+                <div class="formNote">Tu reseña se publicará cuando sea aprobada ✅</div>
+            </form>
         </div>
-
-        <form class="form" id="reviewForm">
-          <label class="field">
-            <span>Nombre</span>
-            <input id="fUsername" maxlength="24" required placeholder="Ej. Angel" />
-          </label>
-
-          <label class="field">
-            <span>Calificación</span>
-            <select id="fRating" required>
-              <option value="5">5 ★★★★★</option>
-              <option value="4">4 ★★★★</option>
-              <option value="3">3 ★★★</option>
-              <option value="2">2 ★★</option>
-              <option value="1">1 ★</option>
-            </select>
-          </label>
-
-          <label class="field">
-            <span>Servicio comprado</span>
-            <input
-              id="fService"
-              type="text"
-              maxlength="40"
-              required
-              placeholder="Ej. Netflix Premium / Disney+ / Spotify"
-            />
-          </label>
-
-          <label class="field">
-            <span>Reseña</span>
-            <textarea
-              id="fText"
-              rows="4"
-              maxlength="240"
-              required
-              placeholder="Cuenta tu experiencia..."
-            ></textarea>
-            <div class="charCount"><span id="charNow">0</span>/240</div>
-          </label>
-
-          <button class="primaryBtn" id="btnSubmitReview" type="submit">
-            Enviar (queda pendiente de aprobación)
-          </button>
-
-          <div class="formNote">Tu reseña se publicará cuando sea aprobada ✅</div>
-        </form>
-      </div>
     </section>
 
     <!-- ✅ Lightbox (SIN flechas) -->
     <section class="lightbox" id="lightbox" aria-hidden="true">
-      <div class="lightbox__backdrop" id="lightboxBackdrop"></div>
-      <button class="lightbox__close" id="btnCloseLightbox" aria-label="Cerrar">
-        ✕
-      </button>
-      <img id="lightboxImg" alt="Imagen" />
+        <div class="lightbox__backdrop" id="lightboxBackdrop"></div>
+        <button class="lightbox__close" id="btnCloseLightbox" aria-label="Cerrar">
+            ✕
+        </button>
+        <img id="lightboxImg" alt="Imagen" />
     </section>
 
     <script type="module" src="./app.js"></script>
-  </body>
+</body>
+
 </html>
