--- a/index.html
+++ b/index.html
@@ -86,27 +86,43 @@
   </main>
 
   <!-- Bottom nav -->
-  <nav class="bottomNav" aria-label="Navegación">
-    <button class="navBtn active" data-tab="home" aria-label="Inicio">
-      <svg class="navIcon" viewBox="0 0 24 24">
-        <path d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1v-10.5z" />
-      </svg>
-    </button>
+  <!-- Bottom nav -->
+<nav class="bottomNav" aria-label="Navegación">
+  <!-- HOME (se queda igual) -->
+  <button class="navBtn active" data-tab="home" aria-label="Inicio">
+    <svg class="navIcon" viewBox="0 0 24 24">
+      <path
+        d="M3 10.5L12 3l9 7.5V21a1 1 0 0 1-1 1h-5v-7H9v7H4a1 1 0 0 1-1-1v-10.5z"
+      />
+    </svg>
+  </button>
 
-    <button class="navBtn" data-tab="search" aria-label="Buscar">
-      <svg class="navIcon" viewBox="0 0 24 24">
-        <circle cx="11" cy="11" r="7"></circle>
-        <path d="M21 21l-4.35-4.35"></path>
-      </svg>
-    </button>
+  <!-- RESEÑAS (abre modal) -->
+  <button class="navBtn" data-tab="reviews" aria-label="Reseñas">
+    <svg class="navIcon" viewBox="0 0 24 24">
+      <path
+        d="M12 17.3l-5.2 3 1-5.8-4.2-4.1 5.8-.8L12 4l2.6 5.6 5.8.8-4.2 4.1 1 5.8z"
+      />
+    </svg>
+  </button>
 
-    <button class="navBtn" data-tab="bag" aria-label="Carrito">
-      <svg class="navIcon" viewBox="0 0 24 24">
-        <path d="M6 7h12l-1 14H7L6 7z"></path>
-        <path d="M9 7a3 3 0 0 1 6 0"></path>
-      </svg>
-    </button>
-  </nav>
+  <!-- OTRA PANTALLA (placeholder por ahora) -->
+  <button class="navBtn" data-tab="screen" aria-label="Otra pantalla">
+    <svg class="navIcon" viewBox="0 0 24 24">
+      <rect x="4" y="5" width="16" height="12" rx="2"></rect>
+      <path d="M8 21h8"></path>
+    </svg>
+  </button>
+
+  <!-- WHATSAPP -->
+  <button class="navBtn" data-tab="whatsapp" aria-label="WhatsApp">
+    <svg class="navIcon waIcon" viewBox="0 0 24 24">
+      <path d="M20 11.5a7.5 7.5 0 0 1-11.7 6.3L4 19l1.2-4.2A7.5 7.5 0 1 1 20 11.5z"></path>
+      <path d="M10 10.2c.4 1 1.8 2.6 3.1 3.1.5.2.8.1 1.1-.2l.7-.8"></path>
+    </svg>
+  </button>
+</nav>
+
 
   <!-- Drawer (puede quedarse aunque ya no haya botón hamburguesa) -->
   <aside class="drawer" id="drawer" aria-hidden="true">
